@startuml

title __MAINMENUFX's Class Diagram__\n

  namespace MainMenuFX {
    class MainMenuFX.MMController {
    }
  }
  

  namespace MainMenuFX {
    class MainMenuFX.Main {
        {static} + main()
        + start()
    }
  }
  
     namespace MainMenuFX {
       namespace LoginFX {
         class MainMenuFX.LoginFX.Login {
             {static} + main()
             + start()
         }
       }
     }


     namespace MainMenuFX {
       namespace LoginFX {
         class MainMenuFX.LoginFX.LoginController {
         }
       }
     }


     MainMenuFX.LoginFX.Login -up-|> javafx.application.Application

  MainMenuFX.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
